--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header></header>
     <main class="encriptador">
-         <img src="img/Group 3.png" alt="logo Alura" width="31px" height="51px">
+         <img src="Group-3.png" alt="logo Alura" width="31px" height="51px">
         <div class="encriptador__ingreso__texto">
            
             <form>
@@ -27,7 +27,7 @@
             </form>
         </div>
         <div class="box__resultado">
-            <img src="img/Muñeco.png" alt="imagen_de_fondo">
+            <img src="Muneco.png" alt="imagen_de_fondo">
             <p class="box__text__resultado">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                 Orci montes, sit et diam risus scelerisque vitae est. Tortor maecenas nunc ut laoreet.
                  Eget diam mauris quam quisque ut eget fringilla sit elit. Libero, sodales duis fames id 
